# ksp-proboj-web

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yml  manage.py  package-lock.json  pyproject.toml  start.sh
compiler/: README.md  compiler.py  config.example.yml  enq.py  pyproject.toml
executor/: .gitignore  README.md  config.example.yml  executor.py  game.py  pyproject.toml  report.py  run.py  update.py
proboj/: urls.py  (+1 more)
web/: .dockerignore  .gitignore  Caddyfile  Dockerfile  compose.prod.yml  compose.yml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  start.sh  tailwind.config.js
web/proboj/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/proboj/bots/: apps.py  forms.py  mixins.py  models.py  urls.py  views.py
web/proboj/bots/migrations/: 0001_initial.py  0002_botversion_language_botversion_secret_and_more.py  0003_botversion_botversion__bot_secret__unique.py  0004_botversion_compile_log.py  0005_remove_botversion_is_latest_and_more.py  0006_alter_bot_name.py
web/proboj/bots/templates/bots/: _detail_matches.html  _detail_versions.html  compile_log.html  create.html  detail.html  list.html  upload.html
web/proboj/games/: admin.py  leaderboard.py  models.py  urls.py  views.py
web/proboj/games/migrations/: 0001_initial.py  0002_game_bot_timeout_game_bundle_game_bundle_version_and_more.py  0003_game_auto_play.py  0004_game_max_bots.py  0005_remove_game_bot_timeout.py  0006_game_bot_timeout.py  0007_game_score_reset_at.py  0008_game_template_page.py  0009_game_processes_per_bot.py
web/proboj/games/templates/: home.html
web/proboj/games/templates/games/: autoplay.html  detail.html  leaderboard.html  page.html
web/proboj/matches/: admin.py  context_processors.py  forms.py  generator.py  models.py  tasks.py  urls.py  views.py
web/proboj/matches/migrations/: 0001_initial.py  0002_match_failed_match_observer_log_match_server_log_and_more.py  0003_match_finished_at.py
web/proboj/matches/templates/matches/: detail.html  list.html
web/proboj/theme/: apps.py
web/proboj/theme/static_src/: app.css
web/proboj/theme/templates/: base.html  layout.html
web/proboj/theme/templates/forms/: field.html
web/proboj/theme/templatetags/: markdown.py
web/proboj/users/: admin.py  apps.py  oidc.py  urls.py  views.py
web/proboj/users/migrations/: 0001_initial.py
(+24 files in other folders)
