[project]
name = "web"
version = "0.1.0"
description = ""
authors = [{ name = "Adam Zahradník", email = "adam@zahradnik.xyz" }]
requires-python = "~=3.12.7"
dependencies = [
    "Django~=5.2",
    "psycopg[binary]~=3.2.3",
    "django-environ>=0.11.2,<0.12",
    "django-widget-tweaks>=1.5.0,<2",
    "django-probes>=1.7.0",
    "markdown~=3.7",
    "pygments>=2.18.0",
    "celery[redis]>=5.2.1,<6",
    "redis>=6.4.0,<7",
    "gunicorn~=23.0.0",
    "mozilla-django-oidc~=4.0.1",
]

[tool.uv]
package = false

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "DJ", "T20", "Q"]

[tool.bumpver]
current_version = "2025.2"
version_pattern = "YYYY.INC1"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"proboj/__init__.py" = [
    'VERSION = "{version}"',
]
